--- a/src/app/pages/tasks/alltasks.html
+++ b/src/app/pages/tasks/alltasks.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <ul class="btn-list clearfix ng-scope">
         <li>
-            <button type="button" class="btn btn-primary">添加</button>
+            <a type="button" href="#/tasks/addTask" class="btn btn-primary">添加</a>
         </li>
         <li>
             <button type="button" class="btn btn-default" disabled>编辑</button>
@@ -12,7 +12,7 @@
             <button type="button" class="btn btn-default" disabled>删除</button>
         </li>
         <li>
-            <button type="button" ng-click="testFn()" class="btn btn-default">导出excel</button>
+            <button type="button" class="btn btn-default">导出excel</button>
         </li>
         <li>
             <button type="button" class="btn btn-default">导入excel</button>
