--- a/src/app/pages/tasks/addTask.html
+++ b/src/app/pages/tasks/addTask.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content" ng-init="init()">
     <div class="modal-header">
         <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
             <em class="ion-ios-close-empty sn-link-close"></em>
@@ -18,6 +18,20 @@
                 <div class="col-sm-9">
                     <input type="text" ng-model="modalDatas.content" class="form-control" id="task_period" name="task_period" value="{task_period}" placeholder="请输入任务周期">
                 </div>
+            </div>
+            <div class="form-group">
+            <ui-select ng-model="selectedTaskType.selected"
+               class="btn-group bootstrap-select form-control"
+               ng-disabled="false"
+               append-to-body="true"
+               search-enabled="false">
+      <ui-select-match placeholder="Standard Select">
+        <span> {{$select.selected.label}}</span>
+      </ui-select-match>
+      <ui-select-choices repeat="taskType in taskTypeOptions | filter: $select.search">
+        <span ng-bind-html="taskType.label"></span>
+      </ui-select-choices>
+    </ui-select>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary" type="button" ng-click="ok()">确定</button>
