--- a/src/app/pages/tasks/addTask.html
+++ b/src/app/pages/tasks/addTask.html
@@ -67,7 +67,7 @@
                 <div class="form-group col-md-6">
                     <label class="col-md-4 control-label">任务间隔&nbsp;</label>
                     <div class="col-md-4">
-                        <input type="text" ng-model="modalDatas.content" class="form-control" id="task_period" name="task_period" value="{task_period}" placeholder="请输入任务间隔">
+                        <input type="text" ng-model="modalDatas.content" class="form-control" id="task_interval" name="task_period" value="{task_period}" placeholder="请输入任务间隔">
                     </div>
                 </div>
             </div>
@@ -76,4 +76,6 @@
                 <button class="btn btn-primary" type="button" ng-click="ok()">确定</button>
                 <button class="btn btn-default" type="button" ng-click="cancel()">取消</button>
             </div>
+        </form>>
     </div>
+</div>
