--- a/src/app/pages/tasks/addTask.html
+++ b/src/app/pages/tasks/addTask.html
@@ -54,7 +54,6 @@
                     </span>
                 </div>
             </div>
-            </div>
 
             <div class="row">
                 <div class="form-group col-md-6">
@@ -67,15 +66,18 @@
                 <div class="form-group col-md-6">
                     <label class="col-md-4 control-label">任务间隔&nbsp;</label>
                     <div class="col-md-4">
+
                         <input type="text" ng-model="modalDatas.content" class="form-control" id="task_interval" name="task_period" value="{task_period}" placeholder="请输入任务间隔">
+
                     </div>
                 </div>
             </div>
 
             <div class="modal-footer">
-                <button class="btn btn-primary" type="button" ng-click="ok()">确定</button>
+                <button class="btn btn-primary" type="button" ng-click="addTask()">确定</button>
                 <button class="btn btn-default" type="button" ng-click="cancel()">取消</button>
             </div>
-        </form>>
+            </div>
+        </form>
     </div>
 </div>
