revise the submitTask

--- a/src/app/pages/devices/bustopinfo.html
+++ b/src/app/pages/devices/bustopinfo.html
@@ -209,7 +209,7 @@
                 </div>
               </div>
             </form>
-            <button ng-click="saveClick()">asdas</button>
+            <!--<button ng-click="saveClick()">asdas</button>-->
           </div>
         </uib-tab>
         <uib-tab heading="场地信息">
