revise the hrindex

--- a/src/app/pages/tasks/widgets/editableRowTable.html
+++ b/src/app/pages/tasks/widgets/editableRowTable.html
@@ -1,13 +1,13 @@
 <div class="add-row-editable-table">
-  <button class="btn btn-primary" ng-click="addUser()">Add row</button>
+  <button class="btn btn-primary" ng-click="addUser()">新增</button>
 </div>
 <table class="table table-bordered table-hover table-condensed">
   <tr>
     <td></td>
-    <td>Name</td>
-    <td>Status</td>
-    <td>Group</td>
-    <td>Actions</td>
+    <td>考核内容</td>
+    <td>考核人员类型</td>
+    <td>考核指标</td>
+    <td>备注</td>
   </tr>
   <tr ng-repeat="user in users" class="editable-row">
     <td>
